@@ -5,6 +5,10 @@ AntBuilderTest:
 * Removed test for Ant 1.4 logfile containing invalid processing instruction, since it could fail the build with some XML Parsers.
   Changed it to test a valid xml log file as produced by Ant versions later than 1.4.x
 
+cruisecontrol.sh:
+----------------------
+* handle path conversion under cygwin. Patch by John Woodward
+
 JabberPublisher:
 ----------------------
 * Add 1 second sleep so multiple jabber publishers work. (CC-119) Patch by Fleur Kelpin
